--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/lua"]
 	path = extern/lua
 	url = https://github.com/lua/lua.git
+[submodule "extern/hlslpp"]
+	path = extern/hlslpp
+	url = https://github.com/redorav/hlslpp.git
